replace get(0) call with new getFirst() method